[gd_scene load_steps=9 format=3 uid="uid://bxt126iidliwk"]

[ext_resource type="Theme" uid="uid://byds11vsd6ber" path="res://themes/pixelart/pixelart.tres" id="1_qwkhk"]
[ext_resource type="Script" path="res://scenes/common/ui/level_end.gd" id="2_64o6q"]
[ext_resource type="FontFile" uid="uid://gw131jxas0sc" path="res://fonts/Peaberry/PeaberryBase.ttf" id="2_uh7jj"]
[ext_resource type="AudioStream" uid="uid://7qmbqpxf572t" path="res://assets/audio/music/mushroom dance_0.ogg" id="3_vgko1"]
[ext_resource type="Shader" path="res://shaders/post_processing/blur_postprocess.gdshader" id="4_5csih"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iocqq"]
shader = ExtResource("4_5csih")
shader_parameter/strength = 2

[sub_resource type="LabelSettings" id="LabelSettings_v6bss"]
font = ExtResource("2_uh7jj")
font_size = 50
font_color = Color(0.984314, 0.960784, 0.937255, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hrecw"]
font_size = 24

[node name="LevelEndUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qwkhk")
script = ExtResource("2_64o6q")
victory_song = ExtResource("3_vgko1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152941, 0.152941, 0.266667, 0.87451)

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_iocqq")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152941, 0.152941, 0.266667, 0.87451)

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="AspectRatioContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 22
alignment = 1

[node name="Label" type="Label" parent="AspectRatioContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "LEVEL COMPLETE"
label_settings = SubResource("LabelSettings_v6bss")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="AspectRatioContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.29
theme_override_constants/separation = 9

[node name="Label" type="Label" parent="AspectRatioContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Score"
label_settings = SubResource("LabelSettings_hrecw")
horizontal_alignment = 1

[node name="HBoxCoins" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="AspectRatioContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxCoins"]
layout_mode = 2
text = "Coins x"

[node name="CoinLabel" type="Label" parent="AspectRatioContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxCoins"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="HBoxLives" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="AspectRatioContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxLives"]
layout_mode = 2
text = "Extra Lives x"

[node name="LivesLabel" type="Label" parent="AspectRatioContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxLives"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="HBoxTime" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="AspectRatioContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxTime"]
layout_mode = 2
text = "Time Bonus x"

[node name="TimeBonusLabel" type="Label" parent="AspectRatioContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxTime"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="HBoxTotal" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="AspectRatioContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxTotal"]
layout_mode = 2
text = "Total x"

[node name="TotalLabel" type="Label" parent="AspectRatioContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxTotal"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="HBoxButtons" type="HBoxContainer" parent="AspectRatioContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="QuitButton" type="Button" parent="AspectRatioContainer/MarginContainer/VBoxContainer/HBoxButtons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "QUIT"

[node name="RetryButton" type="Button" parent="AspectRatioContainer/MarginContainer/VBoxContainer/HBoxButtons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "RETRY"

[node name="ContinueButton" type="Button" parent="AspectRatioContainer/MarginContainer/VBoxContainer/HBoxButtons"]
layout_mode = 2
size_flags_vertical = 4
text = "CONTINUE"

[connection signal="pressed" from="AspectRatioContainer/MarginContainer/VBoxContainer/HBoxButtons/ContinueButton" to="." method="_on_continue_button_pressed"]
